# model-service

./: .gitignore  .pylintrc  README.md  dockerfile  pyproject.toml  startup.sh
.github/workflows/: main.yml  version-bump.yaml
models/: tokenizer.pkl
src/: app.py  download.py  downloader.py
tests/: test_app.py
