[tool.poetry]
name = "model-service"
version = "0.1.0"
description = "Model Service for URL Fishing Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
flask = "2.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
