[tool.poetry]
name = "model-service"
version = "0.1.0"
description = "Model Service for URL Fishing Project"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
flask = "2.2.4"
remla2024_team9_lib_ml = "0.1.1"
tensorflow = "2.10"
tensorflow-io-gcs-filesystem = "0.27.0"
flask-cors = "^4.0.1"
prometheus_client = "0.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
